fixed absolute overflow edge case

--- a/style.css
+++ b/style.css
@@ -369,6 +369,7 @@ a {
 
 /* start WEBSITE */
 #website {
+  position: relative;
   padding: 10px 0px 1% 0px;
   text-align: center;
 }
@@ -380,7 +381,6 @@ a {
 }
 
 #website-built {
-  position: block;
   width: 100%;
 }
 
@@ -425,7 +425,6 @@ a {
 }
 
 #contact-about {
-  position: block;
   width: 100%;
   padding: 10% 0 5% 0;
 }
@@ -441,7 +440,6 @@ a {
 }
 
 #contact-social {
-  position: block;
   width: 100%;
 }
 
@@ -648,6 +646,7 @@ a {
   #website-about {
     position: absolute;
     top: 10%;
+    width: 100%;
     height: 30%;
   }
   #website-about p {
@@ -657,6 +656,7 @@ a {
   }
   #website-built {
     position: absolute;
+    width: 100%;
     bottom: 1%;
   }
 }
